fix some layout problem + missing model resources added

--- a/WorkiSiteWeb/WorkiSiteWeb/Content/Dashboard.css
+++ b/WorkiSiteWeb/WorkiSiteWeb/Content/Dashboard.css
@@ -296,6 +296,12 @@
     width:18%
 }
 
+.bookingSingle
+{
+    margin-left: auto!important;
+    margin-right: auto!important;
+}
+
 /*BACKOFFICE LOCALISATION
 ----------------------------------------------------------*/
 
